--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,7 @@
 body {
     font-size: 20px;
     width: 1300px;
+    height: 1000vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -33,8 +34,8 @@ body {
 .navbar {
     display: grid;
     grid-template-columns: repeat(5, 0.5fr);
-    background-color: rgba(255, 255, 255, 0.90);
-    border: 2px #2383E2 solid;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0 0 5px rgb(120,117,255);
     border-radius: 40px;
     margin: auto;
     opacity: 0.95;
@@ -55,7 +56,7 @@ body {
 }
 
 .navbar a:hover {
-    background: linear-gradient(176deg, #60B0FF 0%, rgba(120, 117, 255, 0.70) 100%);
+    background: linear-gradient(176deg, #2383E2, #7875FF);
     height:46px;
     display: flex;
     justify-content: center;
@@ -103,10 +104,10 @@ body {
     font-weight: 600;
 }
 
-.about-section .header-main {
+#header-main {
     color: black;
     text-align: center;
-    margin: 0;
+    margin: 40px 0 0 0;
     padding: 40px 0 40px 0;
 }
 
@@ -164,3 +165,65 @@ body {
     margin-top: 10px;
 }
 
+.project-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    place-items: center;
+    row-gap: 40px;
+}
+
+.project-card {
+    max-width: 400px;
+    max-height: 800px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 0 5px rgb(120,117,255);
+    overflow: hidden;
+}
+
+.project-card .project-image {
+    width: 400px;
+    height: 200px;
+    /* border-bottom: 1px solid #7875FF; */
+}
+
+.project-detail {
+    display: flex;
+    flex-direction: column;
+    padding: 14px;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    margin: 0;
+    gap: 12px;
+}
+
+.project-title {
+    background: linear-gradient(176deg, #2383E2, #7875FF);
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    width: fit-content;
+    height: fit-content;
+    padding: 10px;
+    border-radius: 40px;
+    display: flex;
+}
+
+.project-title p {
+    margin: 0;
+}
+
+.project-desc {
+    font-weight: normal;
+    font-size: 16px;
+    margin: 0;
+
+}
+
+.tech-used img {
+    max-width: 40px;
+    max-height: 40px;
+    margin: 14px;
+}
